feat: script to repackage the application for windows installer